[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Beeliza"
bundle = "org.beeware"
version = "0.3.0.dev35"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.beeliza]
formal_name = "Beeliza"
description = "A testing app"
sources = ['beeliza']
requires = [
    '../../src/core',
]


[tool.briefcase.app.beeliza.macOS]
requires = [
    '../../src/cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.beeliza.linux]
requires = [
    '../../src/gtk',
]

[tool.briefcase.app.beeliza.windows]
requires = [
    '../../src/winforms',
]

# Mobile deployments
[tool.briefcase.app.beeliza.iOS]
requires = [
    '../../src/iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.beeliza.android]
requires = [
    '../../src/android',
]
