[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Beeliza"
bundle = "org.beeware"
version = "0.0.1"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.beeliza]
formal_name = "Beeliza"
description = "A testing app"
sources = ['beeliza']
requires = [
    '../../core',
]


[tool.briefcase.app.beeliza.macOS]
requires = [
    '../../cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.beeliza.linux]
requires = [
    '../../gtk',
]

[tool.briefcase.app.beeliza.windows]
requires = [
    '../../winforms',
]

# Mobile deployments
[tool.briefcase.app.beeliza.iOS]
requires = [
    '../../iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.beeliza.android]
requires = [
    '../../android',
]

# Web deployment
[tool.briefcase.app.beeliza.web]
requires = [
    '../../web',
]
style_framework = "Shoelace v2.3"
