[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Box Demo"
bundle = "org.beeware"
version = "0.3.0.dev35"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.box]
formal_name = "Box Demo"
description = "A testing app"
sources = ['box']
requires = [
    '../../src/core',
]


[tool.briefcase.app.box.macOS]
requires = [
    '../../src/cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.box.linux]
requires = [
    '../../src/gtk',
]

[tool.briefcase.app.box.windows]
requires = [
    '../../src/winforms',
]

# Mobile deployments
[tool.briefcase.app.box.iOS]
requires = [
    '../../src/iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.box.android]
requires = [
    '../../src/android',
]
