[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Box Demo"
bundle = "org.beeware.toga.examples"
version = "0.0.1"
url = "https://beeware.org"
license.file = "LICENSE"
author = "Tiberius Yak"
author_email = "tiberius@beeware.org"

[tool.briefcase.app.box]
formal_name = "Box Demo"
description = "A testing app"
sources = ["box"]
requires = [
    "../../core",
    "../../travertino",
]


[tool.briefcase.app.box.macOS]
requires = [
    "../../cocoa",
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.box.linux]
requires = [
    "../../gtk",
]

[tool.briefcase.app.box.windows]
requires = [
    "../../winforms",
]

# Mobile deployments
[tool.briefcase.app.box.iOS]
requires = [
    "../../iOS",
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.box.android]
requires = [
    "../../android",
]

base_theme = "Theme.MaterialComponents.Light.DarkActionBar"

build_gradle_dependencies = [
    "com.google.android.material:material:1.12.0",
]

# Web deployment
[tool.briefcase.app.box.web]
requires = [
    "../../web",
]
style_framework = "Shoelace v2.3"
