[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Button Demo"
bundle = "org.beeware"
version = "0.3.0.dev35"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.button]
formal_name = "Button Demo"
description = "A testing app"
sources = ['button']
requires = [
    '../../src/core',
]


[tool.briefcase.app.button.macOS]
requires = [
    '../../src/cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.button.linux]
requires = [
    '../../src/gtk',
]

[tool.briefcase.app.button.windows]
requires = [
    '../../src/winforms',
]

# Mobile deployments
[tool.briefcase.app.button.iOS]
requires = [
    '../../src/iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.button.android]
requires = [
    '../../src/android',
]
