[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Button Demo"
bundle = "org.beeware"
version = "0.0.1"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.button]
formal_name = "Button Demo"
description = "A testing app"
sources = ['button']
requires = [
    '../../core',
]


[tool.briefcase.app.button.macOS]
requires = [
    '../../cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.button.linux]
requires = [
    '../../gtk',
]

[tool.briefcase.app.button.windows]
requires = [
    '../../winforms',
]

# Mobile deployments
[tool.briefcase.app.button.iOS]
requires = [
    '../../iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.button.android]
requires = [
    '../../android',
]

# Web deployment
[tool.briefcase.app.button.web]
requires = [
    '../../web',
]
style_framework = "Shoelace v2.3"
